--- a/omf/static/geoJsonMap/v3/topNav.css
+++ b/omf/static/geoJsonMap/v3/topNav.css
@@ -23,7 +23,7 @@ nav.js-nav--topNav div {
 }
 nav.js-nav--topNav span {
     color: white;
-    font-size: 2rem; 
+    font-size: 26px;
 }
 nav.js-nav--topNav svg path {
     fill: white;
