--- a/omf/static/geoJsonMap/v3/topTab.css
+++ b/omf/static/geoJsonMap/v3/topTab.css
@@ -24,7 +24,7 @@ div.div--topTabTabContainer > div.selected > span::before {
     background: #FFFFFF; /* This is the color of the selected tab */
 }
 div.div--topTabTabContainer > div > span {
-    font-size: 1.6rem;
+    font-size: 26px;
     margin: 0 10px 0 10px;
     padding: 0 0 2px 0;
     position: relative;
